# llmGateway

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEBUG_MODE.md  Dockerfile  Makefile  PLAN_ENUMS_REFACTOR.md  PLAN_GATEWAY_REFACTOR.md  PLAN_WORKER_REFACTOR.md  README.md  README_DOCKER.md  TESTING-GATEKEEPER.md  TESTING-GUIDE.md  TESTING-RUN.md  TESTING.md  docker-compose.yml  main.py  mypy.ini  problem_http.md  pyproject.toml  pyrightconfig.json
.github/workflows/: minimal_tests.yml  quality.yml  test.yml
config/: example_full_config.yaml  example_minimal_config.yaml
docs/: CASCADING_FREEZE_EVIDENCE.md  CONFIG_SYSTEM.md  DEBUG_MODE.md  ERRORS.md  ERROR_PARSING.md  HTTP2_STRESS_TESTS.md  THROUGHPUT_BOTTLENECK_PROBLEM.md
examples/: .env.example  full_config.yaml  minimal_config.yaml
openspec/: config.yaml
openspec/schemas/qa-driven/: schema.yaml
openspec/specs/canonical-config/: spec.md
openspec/specs/ci-pipeline-gatekeeper-tests/: spec.md
openspec/specs/ci-pipeline-split/: spec.md
openspec/specs/config-consistency/: spec.md
openspec/specs/config-default-model-dict/: spec.md
openspec/specs/gatekeeper-hardcode-checker/: spec.md
openspec/specs/h2-stream-cap/: spec.md
openspec/specs/http-client-logging/: spec.md
openspec/specs/makefile-test-runner/: spec.md
scripts/: check-test-hardcodes.sh  run-postgres-tests.sh
src/config/: __init__.py  defaults.py  error_formatter.py  loader.py  logging_config.py  provider_templates.py  schemas.py  validator.py
src/core/: accessor.py  atomic_io.py  constants.py  enums.py  exception_handler.py  http_client_factory.py  httpcore_patch.py  interfaces.py  models.py  policy_utils.py  probes.py  retry.py  types.py
src/db/: database.py
src/metrics/: __init__.py  auth.py  contracts.py  registry.py
src/providers/: __init__.py  base.py
src/services/: background_worker.py  config_manager.py  db_maintainer.py  gateway_cache.py  gateway_service.py  inventory_exporter.py  keeper.py  key_manager.py  key_probe.py  key_purger.py  maintenance.py  metrics_exporter.py  statistics_logger.py
tests/: AGENTS.md  _canonical.py  _constants.py  conftest.py  test_boundary_compliance.py  test_canonical_config.py  test_canonical_fixtures.py  test_canonical_integrity.py  test_checker_cache_fixtures.py  test_ci_pipeline.py  test_config_examples.py  test_conftest_checker_cache.py  test_constants.py  test_debug_functionality.py  test_debug_logging.py  test_debug_mode.py  test_debug_mode_integration.py  test_docker_test_db.py  test_documentation_sync.py  test_enums_logic.py  test_env_example.py  test_error_parsing_base.py  test_error_parsing_edge_cases.py  test_error_parsing_gemini.py  test_error_parsing_openai_like.py  test_error_parsing_scenarios.py  test_error_parsing_validation.py  test_gateway_refactor.py  test_ghost_provider_integration.py  test_ghost_provider_simple.py  test_hardcode_checker_core.py  test_hardcode_checker_modes.py  test_hardcode_checker_patterns.py  test_hardcode_checker_production_urls.py  test_hardcode_checker_regression.py  test_integration_helpers_migration.py  test_layer_import_scan.py  test_makefile_groups.py  test_metrics_fixture_dedup.py  test_no_enabled_providers.py  (+17 more)
tests/batching/: test_adaptive_batching_config.py  test_adaptive_controller.py  test_adaptive_security.py  test_callback.py  test_probe_adaptive_integration.py
tests/diagnostics/: diagnostic_forward_refs.py  diagnostic_pep695.py  diagnostic_types.py
tests/e2e/: test_gateway_request_logging.py  test_multiprocess_gateway.py
tests/integration/: _helpers.py  conftest.py  test_config_examples.py  test_docker_compose.py  test_error_parsing_catch_all.py  test_export_scheduler_integration.py  test_gateway_cache_shared_key_bug.py  test_gateway_dispatcher_routing.py  test_gateway_full_duplex_streaming.py  test_gateway_multiprocess_metrics.py  test_gateway_pool_init.py  test_gateway_refactor.py  test_gateway_retry_synergy.py  test_ghost_provider_integration.py  test_helpers_import.py  test_keeper_metrics_endpoint.py  test_keeper_pool_init.py  test_key_export_pipeline.py  test_key_probe_logging.py  test_logging_format_integration.py  test_metrics_endpoint.py  test_penalty_behavior.py  test_raw_cleanup_pipeline.py  test_report_key_failure_integration.py  test_stream_closed_bug.py  test_unified_error_parsing.py  test_worker_pool_init.py
tests/probes/: test_key_probe.py
tests/security/: test_credential_sanitization.py  test_gateway_auth.py  test_logging_security.py  test_transparent_error_security.py
tests/services/: test_gateway_cache_shared_key_bug.py
tests/stress/: cert.pem  conftest.py  ephemeral_api.py  key.pem  metrics.py  test_cap_prevents_freeze.py  test_cascading_freeze.py  test_connection_growth.py  test_ephemeral_server.py  test_keepalive_churn.py  test_metrics_collector.py  test_multi_client.py  test_pool_recovery.py  test_pool_saturation.py  test_production_load.py  test_stream_desync_patch.py  test_stream_exhaustion.py  test_throughput_bottleneck.py
tests/test_batching/: test_adaptive_batching_config.py  test_adaptive_controller.py  test_adaptive_security.py  test_callback.py  test_probe_adaptive_integration.py
tests/unit/: conftest.py  test_logging_verbosity.py  test_main_cli.py  test_main_error_handling.py  test_main_module_app.py  test_validate_pool_sizing.py
(+345 files in other folders)
