[project]
name = "llmgateway"
version = "0.1.0"
description = ""
authors = [
    {name = "user",email = "user@user.com"}
]
readme = "README.md"
requires-python = "3.13.5"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ruamel-yaml (>=0.18.15,<0.19.0)",
    "deepmerge (>=2.0,<3.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.120.2,<0.121.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
