[project]
name = "llmgateway"
version = "0.1.0"
description = ""
authors = [
    {name = "user",email = "user@user.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.13.5"
dependencies = [
    "asyncpg (>=0.30.0,<0.32.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ruamel-yaml (>=0.18.15,<0.19.0)",
    "deepmerge (>=2.0,<3.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.120.2,<0.121.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "asyncpg-stubs (>=0.31.1,<0.32.0)"
]

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`), and other rules
select = ["E", "F", "W", "I", "B", "C4", "SIM", "TID", "UP", "YTT"]
ignore = [
    "E501", # line too long (handled by black)
]
# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []
# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]
# Set the maximum line length
line-length = 88
# Set the target Python version
target-version = "py313"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
# Group imports by type
known-first-party = ["src"]

[tool.mypy]
# Specify the Python version in MAJOR.MINOR format
python_version = "3.13"
strict = true
ignore_missing_imports = false

# Per-module options:
# Combined overrides for modules that lack type stubs.
# The 'dotted_module_name.*' pattern matches the module and any submodules.
[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "apscheduler.*"
]
ignore_missing_imports = true
